--- a/Client_Project testing/app/public/index.html
+++ b/Client_Project testing/app/public/index.html
@@ -3,11 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React App</title>
-    <link rel="icon" href="/icon.png"> 
+    <title>Suicide Risk App</title>
+    <link rel="icon" href="/icon.png">
 </head>
 <body>
     <div id="root"></div>
-    <script src="main.js"></script> 
+    <!-- LivePerson Widget Script -->
+    <script src="https://lpcdn.lpsnmedia.net/webagent/client-SDK.min.js"></script>
+    <!-- Check if lpTag is loaded -->
+    <script>
+        window.onload = function() {
+            if (window.lpTag) {
+                console.log("LivePerson widget loaded successfully!");
+            } else {
+                console.log("LivePerson widget not loaded.");
+            }
+        };
+    </script>
+
+    <!-- Your React app script -->
+    <script src="main.js"></script>
 </body>
 </html>
